# lib-roadrunner-trial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  agnostic_rr.cpp  cleaned_model.xml  glycolysis.xml  hello.cpp  hello_roadrunner.cpp  oxphos.xml  ppp.xml  tca_cycle.xml
